<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/app_padding_bottom"
    android:paddingLeft="@dimen/app_padding"
    android:paddingRight="@dimen/app_padding"
    android:paddingTop="@dimen/app_padding"
    tools:context="com.example.android.opticsquiz.MainActivity">

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_margin_top"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="submitQuiz"
        android:text="@string/submit" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/submit_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/question"
                android:text="@string/question_1" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_1_1" />

                <RadioButton
                    android:id="@+id/question_1_correct_answer"
                    style="@style/radio_button"
                    android:text="@string/answer_1_2" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_1_3" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_1_4" />
            </RadioGroup>

            <View style="@style/line" />

            <TextView
                style="@style/question"
                android:text="@string/question_2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_2_1" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_2_2" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_2_3" />

                <RadioButton
                    android:id="@+id/question_2_correct_answer"
                    style="@style/radio_button"
                    android:text="@string/answer_2_4" />
            </RadioGroup>

            <View style="@style/line" />

            <TextView
                style="@style/question"
                android:text="@string/question_3" />

            <EditText
                android:id="@+id/edit_text_question_3"
                style="@style/edit_text"
                android:hint="@string/please_enter_your_anwser" />

            <View style="@style/line" />

            <TextView
                style="@style/question"
                android:text="@string/question_4" />

            <CheckBox
                android:id="@+id/question_4_wrong_answer_1"
                style="@style/checkbox"
                android:text="@string/answer_4_1" />

            <CheckBox
                android:id="@+id/question_4_wrong_answer_2"
                style="@style/checkbox"
                android:text="@string/answer_4_2" />

            <CheckBox
                android:id="@+id/question_4_wrong_answer_3"
                style="@style/checkbox"
                android:text="@string/answer_4_3" />

            <CheckBox
                android:id="@+id/question_4_correct_answer_1"
                style="@style/checkbox"
                android:text="@string/answer_4_4" />

            <CheckBox
                android:id="@+id/question_4_correct_answer_2"
                style="@style/checkbox"
                android:text="@string/answer_4_5" />

            <View style="@style/line" />

            <TextView
                style="@style/question"
                android:text="@string/question_5" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/question_5_correct_answer"
                    style="@style/radio_button"
                    android:text="@string/answer_5_1" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_5_2" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_5_3" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_5_4" />
            </RadioGroup>

            <View style="@style/line" />

            <TextView
                style="@style/question"
                android:text="@string/question_6" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_6_1" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_6_2" />

                <RadioButton
                    android:id="@+id/question_6_correct_answer"
                    style="@style/radio_button"
                    android:text="@string/answer_6_3" />

                <RadioButton
                    style="@style/radio_button"
                    android:text="@string/answer_6_4" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_buffer" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>